# para-bank-ui-automation

./: .bandit  .bandit.yaml  .gitignore  .pre-commit-config.yaml  AWS_deployment_plan.txt  Dockerfile  Dockerfile.jenkins  Dockerfile.test  Jenkinsfile  README.md  TRACEABILITY_MATRIX.md  TUTORIAL.md  cleanup.sh  commit_output.txt  conftest.py  docker-compose.aws.yml  docker-compose.yml  metrics_pusher.py  monitoring.py  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  setup.py  test_example.py
config/: __init__.py  dev.json.example  prod.json.example  stage.json.example
config/grafana/provisioning/dashboards/: dashboard.yml  executive_metrics.json  test_results.json
config/grafana/provisioning/datasources/: prometheus.yml
config/prometheus/: prometheus.yml
docker/: Dockerfile  Dockerfile.jenkins  Dockerfile.test
docs/: ACTION_PLAN.md  HEALIX_FRESH_INSTALL.md  RELEASE_NOTES.md
grafana/provisioning/dashboards/: test_metrics_dashboard.json
pages/: home_login_page.py
prometheus/: prometheus.yml
results/: report.html
scripts/: cleanup.py  format.sh  lint.sh  test-pipeline.sh  test_jenkinsfile.sh  test_security_scan.sh  typecheck.sh
src/utils/: logger.py  metrics_pusher.py  monitoring.py  stability.py
tests/: test_account_overview.py  test_bill_pay.py  test_contact_us.py  test_e2e_registration_happy_path.py  test_find_transactions.py  test_forgot_login.py  test_home_login.py  test_home_page_ui.py  test_login.py  test_logout.py  test_open_account.py  test_registration.py  test_request_loan.py  test_site_navigation.py  test_transfer_funds.py  test_update_contact_info.py
tests/data/: models.py  user_factory.py
tests/flows/: bill_pay_flows.py
tests/pages/: account_overview_page.py  bill_pay_locators.py  bill_pay_page.py  contact_us_page.py  find_transactions_page.py  forgot_login_page.py  home_login_page.py  open_account_page.py  register_page.py  request_loan_page.py  transfer_funds_page.py  update_contact_info_page.py
tests/pages/helper_pom/: payment_services_tab.py
