[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "para-bank-ui-automation"
version = "0.1.0"
description = "UI Automation tests for ParaBank"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "pytest-html",
    "pytest-playwright",
    "playwright",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "mypy",
    "bandit",
    "pip-audit"
]

[tool.setuptools]
packages = ["tests", "src"]
package-dir = {"" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --html=test-results/report.html --self-contained-html --junitxml=test-results/junit.xml"
markers = [
    "smoke: marks tests as smoke tests",
    "regression: marks tests as regression tests",
    "integration: marks tests as integration tests",
    "webtest: mark a test as a webtest (deselect with '-m \"not webtest\"')",
    "slow: mark test as slow running"
]

# JUnit XML output configuration
junit_family = "legacy"
junit_logging = "all"
junit_duration_report = "call"

# Playwright configuration
[tool.pytest.ini_options.playwright]
browser = "chromium"
headless = true
video = "retain-on-failure"
trace = "retain-on-failure"
viewport_width = 1280
viewport_height = 800
timeout = 30000
navigation_timeout = 30000
base_url = "https://parabank.parasoft.com/parabank/"
screenshot = "only-on-failure"

# Code formatting
[tool.black]
line-length = 100
target-version = ['py310']
include = '\\.pyi?$'
exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.coverage
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

# Coverage configuration
[tool.coverage.run]
source = ["src", "tests", "conftest.py"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]
data_file = ".coverage"

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.coverage.html]
directory = "coverage_html"

# Type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

# Linter configuration
[tool.pylint.master]
load-plugins = ["pylint.extensions.mccabe"]
max-line-length = 100
ignore-patterns = "test_.*?py$"
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error",
    "no-name-in-module",
    "unused-argument"
]